tests/programs/taint/a4-test-cases/fail/taint_array_fail1.rice
#[secure]
fn secure() -> int {
  0 
}

fn main() {
  let a = [secure()] in
  println(int_to_string(a[0]))
}